--- a/html/comment.html
+++ b/html/comment.html
@@ -13,10 +13,8 @@
 <body>
 <!--Navigation bar-->
 <div id="nav-placeholder"> </div>
-<script>
-    $(function(){
-        $("#nav-placeholder").load("navbar.html");
-    });
+<script src="../js/navbar.js">
+
 </script>
 <!--end of Navigation bar-->
 </body>
