--- a/html/story.html
+++ b/html/story.html
@@ -6,17 +6,16 @@
     <!--------- BOOTSTRAP -------->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <!---------- JQuery ----------->
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+     <!---------- JQuery ----------->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
 <body>
 <!--Navigation bar-->
-<div id="nav-placeholder"> </div>
-<script>
-    $(function(){
-        $("#nav-placeholder").load("navbar.html");
-    });
+<div id="nav-placeholder">
+</div>
+<script src="../js/navbar.js">
+
 </script>
 <!--end of Navigation bar-->
 </body>
