add changes to story.html

--- a/html/story.html
+++ b/html/story.html
@@ -17,5 +17,18 @@
 <script src="../js/navbar.js">
 </script>
 <!--end of Navigation bar-->
+
+<div id="app">
+    <tr>
+        <th>User</th>
+        <th>Title</th>
+        <th>Text</th>
+        <th>Hanesst_id</th>
+        <th>Url</th>
+        <th>Points</th>
+        <th>Is_spam</th>
+        <th>Type</th>
+    </tr>
+</div>
 </body>
 </html>
