add table content to comments

--- a/html/comment.html
+++ b/html/comment.html
@@ -8,7 +8,10 @@
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <!---------- JQuery ----------->
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
+    <!----------- VUE ------------>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.2/vue.min.js"></script>
+    <!---------- AXIOS ----------->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
 <!--Navigation bar-->
@@ -16,5 +19,16 @@
 <script src="../js/navbar.js">
 </script>
 <!--end of Navigation bar-->
+<table class="table table-bordered table-hover" >
+    <tr>
+        <th>User</th>
+        <th>Comment</th>
+    </tr>
+    <tr v-for="result in results">
+        <td style="color:#1496ed">{{result.user}}</td>
+        <td>{{result.comment}}</td>
+    </tr>
+</table>
+
 </body>
 </html>
