add comments using VUE framework and AXIOS http requests

--- a/html/comment.html
+++ b/html/comment.html
@@ -19,6 +19,7 @@
 <script src="../js/navbar.js">
 </script>
 <!--end of Navigation bar-->
+<div id="app">
 <table class="table table-bordered table-hover" >
     <tr>
         <th>User</th>
@@ -29,6 +30,32 @@
         <td>{{result.comment}}</td>
     </tr>
 </table>
+</div>
+<script>
+    var vm = new Vue({
+        el: '#app',
+        data: {
+            results: ''
+        },
+        created: function () {
+            this.loadData();
+        },
+        methods: {
+            loadData: function () {
+                this.results = 'Loading ...';
+                var vm = this;
+                axios.get('http://165.227.136.184/api/comments')
+                    .then(function (response) {
+                        vm.results = response.data.data;
+                        console.log(response.data.data);
+                    })
+                    .catch(function (error) {
+                        vm.status = 'An error occured' + error;
+                    })
+            }
+        }
+    });
+</script>
 
 </body>
 </html>
