--- a/html/comment.html
+++ b/html/comment.html
@@ -32,30 +32,8 @@
 </table>
 </div>
 <script>
-    var vm = new Vue({
-        el: '#app',
-        data: {
-            results: ''
-        },
-        created: function () {
-            this.loadData();
-        },
-        methods: {
-            loadData: function () {
-                this.results = 'Loading ...';
-                var vm = this;
-                axios.get('http://165.227.136.184/api/comments')
-                    .then(function (response) {
-                        vm.results = response.data.data;
-                        console.log(response.data.data);
-                    })
-                    .catch(function (error) {
-                        vm.status = 'An error occured' + error;
-                    })
-            }
-        }
-    });
+    var apiUrl = 'http://165.227.136.184/api/comments';
 </script>
-
+<script src="axiosGet.js"></script>
 </body>
 </html>
