--- a/html/comment.html
+++ b/html/comment.html
@@ -34,6 +34,6 @@
 <script>
     var apiUrl = 'http://165.227.136.184/api/comments';
 </script>
-<script src="axiosGet.js"></script>
+<script src="../js/axiosGet.js"></script>
 </body>
 </html>
