--- a/html/story.html
+++ b/html/story.html
@@ -47,6 +47,6 @@
 <script>
     var apiUrl = 'http://165.227.136.184/api/stories';
 </script>
-<script src="axiosGet.js"></script>
+<script src="../js/axiosGet.js"></script>
 </body>
 </html>
