clean up, getting ready for post

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -11,7 +11,7 @@
                 <a class="nav-link" href="#">New <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Comment</a>
+                <a class="nav-link" href="http://localhost:63342/Hackernews_Frontend/html/comment.html">Comment</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Show</a>
